fix references to nicholson31tarka.nl

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@ Mob: +31 (0) 6 51 60 83 25
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<br>
 <br>
-WWW: <a href="index.html">https://www.nicholson31tarka.nl</a>
+WWW: <a href="index.html">https://www.nicholson31tarka.com</a>
 <br>
 <br>
 </body></html>
