--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <td style="vertical-align: top;">
 <h1 style="text-align: center;"> Nicholson 31.
 "TARKA"</h1>
-<h1 style="text-align: center;"><span style="" lang="DE"><span style="">&nbsp;</span></span><big><b style=""><span style="font-size: 14pt; font-family: &quot;Times New Roman&quot;,serif;" lang="EN-GB">Price:</span></b><span style="font-size: 14pt; font-family: &quot;Times New Roman&quot;,serif;" lang="EN-GB"><span style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<h1 style="text-align: center;"><span style="" lang="DE"><span style="">&nbsp;</span></span><big><b style=""><span style="font-size: 14pt; font-family: &quot;Times New Roman&quot;,serif;" lang="EN-GB"></span></b><span style="font-size: 14pt; font-family: &quot;Times New Roman&quot;,serif;" lang="EN-GB"><span style="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </td>
 </tr>
 </tbody>
