change contact details

--- a/public/index.html
+++ b/public/index.html
@@ -84,14 +84,14 @@ Galerie</span></a><br>
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;<br>
-E-mail: <a href="mailto:file:///D:/site%20alphons/nic-31@hotmail.com">nic-31@hotmail.com</a>&nbsp;&nbsp;
+E-mail: <a href="mailto:rene+tarka@nederhand.net">rene+tarka@nederhand.net</a>&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp; <br>
-Mob: +31 (0) 6 51 60 83 25
+Mob: +31 (0) 6 43058528
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
